💄🐛 fix grid row/col scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,20 @@ a {
   grid-area: header;
 }
 
+/* https://github.com/ant-design/ant-design/issues/10144 🙄 */
+.ant-row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
+.ant-col:first-child {
+  padding-left: 0 !important;
+}
+
+.ant-col:last-child {
+  padding-right: 0 !important;
+}
+
 .App > main {
   grid-area: main;
 }
